extract code into new services; fix prime ref issue related to having prev/next refs.